--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.14.1",
-    "@genkit-ai/next": "^1.14.1",
+    "@genkit-ai/google-genai": "^1.22.0",
+    "@genkit-ai/next": "^1.22.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -46,7 +46,7 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^12.1.1",
     "framer-motion": "^11.2.10",
-    "genkit": "^1.14.1",
+    "genkit": "^1.22.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
@@ -67,7 +67,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/wav": "^1.0.2",
-    "genkit-cli": "^1.14.1",
+    "genkit-cli": "^1.22.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
